# optopus

./: .env  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  REFACTORING_PLAN.md  backtest_cross_validation.py  backtest_sps_nDTE.py  conf.py  option_data_api.py  pyproject.toml  python  requirements.txt  setup.py  sps_60dte_trader.py  tradier_option_pull.py  trading.py  update_leg_profile.py.lprof
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/: index.doctree  modules.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/docs/: index.html  modules.html
data/: SPY_2019-01-24 10-30.parquet  SPY_2024-09-06 15-30.parquet  SPY_2024-09-06 15-45.parquet  SPY_2024-09-09 09-45.parquet  SPY_2024-10-15 10-00.parquet  SPY_2024-10-15 15-45.parquet
docs/: index.rst
example_scripts/: abstract_order_usage.py  alpaca_option_pull.py  backtest_1dte.py  backtest_TheEdge.py  backtest_cross_validation.py  backtest_iron_condors.py  backtest_naked_calls.py  backtest_premium_abductor.py  backtest_sps_4dte.py  backtest_sps_nDTE.py  backtest_verticals.py  bot_info.py  bot_status.py  dotenv.example  fetch_option_chains.py  plot_performance.py  scheduler.py  sps_60dte_trader.py  test_trading_manager.py
example_scripts/60dteBot/: backtest.py  backtest_cross_validate.py  bot.py  trading_manager60dte.pkl  trading_manager60dte_20241030_220000.pkl.bkup
optopus.egg-info/: PKG-INFO  SOURCES.txt
src/optopus/: __init__.py
src/optopus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/optopus/backtest/: __init__.py  base_backtest.py  bidirectional_vertical_spread.py  iron_butterfly.py  iron_condor.py  naked_call.py  naked_put.py  straddle.py  vertical_spread.py
src/optopus/brokers/: __init__.py  broker.py  order.py
src/optopus/cli/: __init__.py  bot_status.py  (+2 more)
templates/0dte-IB/: backtest.py  backtest_cross_validate.py  config.py  exit\_condition.py
tests/: test_ohlc_data_processor.py  test_option_leg.py  test_option_manager.py  test_option_spread.py  test_pipeline.py  test_schwab_order.py
(+272 files in other folders)
