[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optopus"
version = "0.1.0"
authors = [
    { name = "Huy Nguyen", email = "huynguyen2406@gmail.com" }
]
description = "A Python project for options trading and backtesting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "scripts"]

[project.scripts]
optopus = "optopus.main:main"

[project.dependencies]
"joblib"
"loguru"
"matplotlib"
"numpy"
"pandas"
"python-dotenv"
"requests"
"scikit-learn"
"scipy"
"setuptools"
"tqdm"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ["migrations", "venv", "__pycache__"]
