[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optopus"
version = "0.3.7"
authors = [
    { name = "Huy Nguyen", email = "huynguyen2406@gmail.com" }
]
description = "A Python project for options trading and backtesting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "joblib>=1.2.0",
    "loguru>=0.6.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "setuptools>=58.0.0",
    "tqdm>=4.62.0",
    "dill>=0.3.4"
]

[project.scripts]
optopus = "optopus.main:main"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = ["migrations", "venv", "__pycache__"]
